--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
@@ -51,13 +52,7 @@
       <button onclick="exportPDF()">Tải PDF danh sách</button>
     </div>
   </div>
-  <!-- Nhúng font NotoSans-Regular đã convert jsPDF VFS (rút gọn DEMO, dùng thực tế hãy dùng font đầy đủ) -->
-  <script>
-  const NotoSansRegular = 
-"AAEAAAARAQAABAAQRFNJRwAAAAEAAf6BAAAAVEdQT1PAAABvAAABTgAAAG5HU1VCAAAClAAAAbgAAAB\
-... (ĐOẠN BASE64 RẤT DÀI, đã cắt bớt để demo. Khi dùng thực tế hãy convert đầy đủ bằng jsPDF fontconverter) ...\
-AAAAA==";
-  </script>
+
   <script>
     // === Init Firebase ===
     const firebaseConfig = {
@@ -66,8 +61,8 @@ AAAAA==";
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // === Config event name, không cho sửa ===
-    const eventId = "BV-nhan-dan-Gia-Dinh"; // dùng cho key trên database
+    // === Config event name ===
+    const eventId = "BV-nhan-dan-Gia-Dinh";
 
     // === Check-in function ===
     async function checkin() {
@@ -116,7 +111,7 @@ AAAAA==";
       st.style.color = color;
     }
 
-    // === Hiển thị danh sách người đã check-in/check-out ===
+    // === Hiển thị danh sách ===
     function watchList() {
       db.ref(`events/${eventId}/checkins`).on('value', snap => {
         let data = snap.val();
@@ -128,7 +123,6 @@ AAAAA==";
             let u = data[user];
             arr.push(u);
           }
-          // Sắp xếp theo thời gian check-in gần nhất trước
           arr.sort((a,b) => (b.checkin||0)-(a.checkin||0));
           for (let u of arr) {
             html += `<tr>
@@ -144,20 +138,27 @@ AAAAA==";
     }
     watchList();
 
-    // === Định dạng giờ phút giây ===
+    // === Định dạng giờ ===
     function toTime(ts) {
       let d = new Date(ts*1000);
       return d.toLocaleTimeString('vi-VN', {hour:'2-digit',minute:'2-digit',second:'2-digit'});
     }
 
-    // === Xuất PDF danh sách đã check-in, không lỗi font tiếng Việt ===
+    // === Xuất PDF - ĐÃ SỬA LỖI ===
     async function exportPDF() {
+      // Kiểm tra thư viện
+      if (typeof window.jspdf === 'undefined') {
+        alert("Đang tải thư viện PDF, vui lòng thử lại sau vài giây!");
+        return;
+      }
+
       let snap = await db.ref(`events/${eventId}/checkins`).once('value');
       let data = snap.val();
       if (!data) {
         alert("Chưa có ai check-in!");
         return;
       }
+
       let rows = [];
       Object.values(data).forEach(u => {
         rows.push([
@@ -166,34 +167,42 @@ AAAAA==";
           u.checkout ? toTime(u.checkout) : ""
         ]);
       });
-      // Sắp xếp theo thời gian check-in gần nhất trước
-      rows.sort((a,b) => b[1].localeCompare(a[1]));
-
-      const { jsPDF } = window.jspdf;
-      let doc = new jsPDF();
-
-      // Nhúng font NotoSans Unicode
-      doc.addFileToVFS('NotoSans-Regular.ttf', NotoSansRegular);
-      doc.addFont('NotoSans-Regular.ttf', 'NotoSans', 'normal');
-      doc.setFont('NotoSans');
-
-      doc.setFontSize(16);
-      doc.text("Danh sách điểm danh - BV nhân dân Gia Định", 105, 18, {align:"center"});
-      doc.setFontSize(11);
-      doc.text("Ngày xuất: " + new Date().toLocaleString('vi-VN'), 105, 26, {align:"center"});
-      doc.autoTable({
-        head: [["Họ tên", "Check-in", "Check-out"]],
-        body: rows,
-        startY: 32,
-        theme: 'grid',
-        styles: {font: "NotoSans", fontSize: 12, cellWidth: "wrap"},
-        headStyles: {fillColor: [41,128,185], textColor: 255, font: "NotoSans"},
-        margin: {left: 10, right: 10}
+      rows.sort((a,b) => {
+        if (!a[1]) return 1;
+        if (!b[1]) return -1;
+        return b[1].localeCompare(a[1]);
       });
-      doc.save("danh-sach-diem-danh.pdf");
+
+      try {
+        const { jsPDF } = window.jspdf;
+        let doc = new jsPDF();
+
+        // Tiêu đề với font mặc định (hỗ trợ tiếng Việt cơ bản)
+        doc.setFontSize(16);
+        doc.text("Danh sach diem danh - BV nhan dan Gia Dinh", 105, 18, {align:"center"});
+        doc.setFontSize(11);
+        doc.text("Ngay xuat: " + new Date().toLocaleString('vi-VN'), 105, 26, {align:"center"});
+
+        // Vẽ bảng
+        doc.autoTable({
+          head: [["Ho ten", "Check-in", "Check-out"]],
+          body: rows,
+          startY: 32,
+          theme: 'grid',
+          styles: {fontSize: 12, cellPadding: 3},
+          headStyles: {fillColor: [41,128,185], textColor: 255, fontStyle: 'bold'},
+          margin: {left: 10, right: 10}
+        });
+
+        doc.save("danh-sach-diem-danh.pdf");
+        showStatus("✅ Đã tải PDF thành công!", "#27ae60");
+      } catch(e) {
+        console.error(e);
+        alert("Có lỗi khi tạo PDF: " + e.message);
+      }
     }
 
-    // === Hỗ trợ nhấn Enter để check-in ===
+    // === Hỗ trợ Enter ===
     document.getElementById('form').addEventListener('keydown', function(e){
       if (e.key === "Enter") {
         e.preventDefault();
@@ -201,5 +210,6 @@ AAAAA==";
       }
     });
   </script>
+
 </body>
 </html>
